--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>D-Calculator</title>
+<title>Dynamic Calculator</title>
 	<link rel="stylesheet" href="style.css">
 </head>
  
